--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: deploy
 
 on:
   push:
-    branches: [master] # master 分支有 push 时触发
+    branches: [main] # master 分支有 push 时触发
 
 jobs:
   deploy:
@@ -10,10 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Node.js v14.x
+      - name: Setup Node.js v18.14.x
         uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
+          node-version: '18.14.x'
 
       - name: Install
         run: npm install # 安装依赖
